[gd_scene load_steps=6 format=3 uid="uid://byl6jo86fc24m"]

[ext_resource type="Script" path="res://ui/menus/scripts/upgrade_menu.gd" id="1_6gpx1"]
[ext_resource type="Texture2D" uid="uid://bhsqhajkx7xp4" path="res://ui/menus/sprites/menu_button_large.png" id="2_tcix0"]
[ext_resource type="Script" path="res://ui/menus/scenes/confirm_selection_menu.gd" id="2_uni6t"]
[ext_resource type="FontFile" uid="uid://28fnj7605yu1" path="res://ui/PressStart2P-Regular.ttf" id="3_webux"]
[ext_resource type="Texture2D" uid="uid://vcy5jalrmnbi" path="res://ui/menus/sprites/menu_button_small.png" id="4_p6xip"]

[node name="UpgradeMenu" type="CanvasLayer"]
script = ExtResource("1_6gpx1")

[node name="ConfirmSelectionMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_uni6t")

[node name="ConfirmSelectionLabel" type="Label" parent="ConfirmSelectionMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -39.0
offset_right = 90.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_webux")
theme_override_font_sizes/font_size = 8
text = "CONFIRM SELECTION: "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TextureRect" type="TextureRect" parent="ConfirmSelectionMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.0
offset_top = -80.0
offset_right = 37.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("4_p6xip")
stretch_mode = 4

[node name="Label" type="Label" parent="ConfirmSelectionMenu/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -8.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_webux")
theme_override_font_sizes/font_size = 8
text = "CONFIRM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfirmButton" type="Button" parent="ConfirmSelectionMenu/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.5
offset_top = -12.5
offset_right = 36.5
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="TextureRect2" type="TextureRect" parent="ConfirmSelectionMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.0
offset_top = -43.0
offset_right = 37.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("4_p6xip")
stretch_mode = 4

[node name="Label" type="Label" parent="ConfirmSelectionMenu/TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -11.5
offset_right = 24.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_webux")
theme_override_font_sizes/font_size = 8
text = "CANCEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CancelButton" type="Button" parent="ConfirmSelectionMenu/TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.5
offset_top = -12.5
offset_right = 36.5
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="SelectUpgradeMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="SelectUpgradeMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -23.5
offset_right = 69.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("2_tcix0")

[node name="UpgradeOne" type="Label" parent="SelectUpgradeMenu/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_webux")
theme_override_font_sizes/font_size = 8
text = "hello"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectUpgradeOneButton" type="Button" parent="SelectUpgradeMenu/TextureRect"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="TextureRect2" type="TextureRect" parent="SelectUpgradeMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -78.5
offset_right = 69.0
offset_bottom = -31.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("2_tcix0")

[node name="UpgradeTwo" type="Label" parent="SelectUpgradeMenu/TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_webux")
theme_override_font_sizes/font_size = 8
text = "hello"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectUpgradeTwoButton" type="Button" parent="SelectUpgradeMenu/TextureRect2"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="TextureRect3" type="TextureRect" parent="SelectUpgradeMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = 32.5
offset_right = 69.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("2_tcix0")

[node name="UpgradeThree" type="Label" parent="SelectUpgradeMenu/TextureRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -11.5
offset_right = 37.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_webux")
theme_override_font_sizes/font_size = 8
text = "hello"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectUpgradeThreeButton" type="Button" parent="SelectUpgradeMenu/TextureRect3"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="UpgradeMenuHeader" type="Label" parent="SelectUpgradeMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 9.0
offset_right = 80.0
offset_bottom = 32.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_webux")
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeMenuSubHeader2" type="Label" parent="SelectUpgradeMenu/UpgradeMenuHeader"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 69.0
offset_right = 80.0
offset_bottom = 92.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(1, 0.0588235, 0.0588235, 1)
theme_override_fonts/font = ExtResource("3_webux")
theme_override_font_sizes/font_size = 8
text = "CHOOSE ONE"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="ConfirmSelectionMenu/TextureRect/ConfirmButton" to="ConfirmSelectionMenu" method="_on_confirm_button_button_down"]
[connection signal="button_down" from="ConfirmSelectionMenu/TextureRect2/CancelButton" to="ConfirmSelectionMenu" method="_on_cancel_button_button_down"]
[connection signal="button_down" from="SelectUpgradeMenu/TextureRect/SelectUpgradeOneButton" to="." method="_on_select_upgrade_one_button_button_down"]
[connection signal="button_down" from="SelectUpgradeMenu/TextureRect2/SelectUpgradeTwoButton" to="." method="_on_select_upgrade_two_button_button_down"]
[connection signal="button_down" from="SelectUpgradeMenu/TextureRect3/SelectUpgradeThreeButton" to="." method="_on_select_upgrade_three_button_button_down"]
